style.css
/* ... */
/* -------- Loaders ------------*/

.loader {
  position: absolute;
  z-index: 5;
  display: none;
  opacity: 0.85;
  -webkit-transition: opacity 0.25s ease-in-out;
  -moz-transition: opacity 0.25s ease-in-out;
  -o-transition: opacity 0.25s ease-in-out;
  transition: opacity 0.25s ease-in-out;
}
.loader img {
  width: 45px;
  filter: invert(0.1);
}

#loader {
  top: calc(50% - 60px);
  left: calc(50% + 125px);
  opacity: 0;
}

#loader-comics {
  bottom: 20px;
  left: calc(50% - 14px);
  display: block;
}
#loader-comics img {
  width: 30px;
}

#loader-list {
  display: none;
}
#loader-list img {
  position: relative;
  top: 35px;
  left: 0;
  width: 45px;
}


/* -------- Modals ------------*/

.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 20;
  display: none;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
  cursor: pointer;
}

/* FullScreen images modal */

#modal-helper {
  height: 100%;
  display: inline-block;
  vertical-align: middle;
}
#modal-img {
  max-width: calc(100% - 15px);
  max-height: calc(100% - 55px);
  z-index: 20;
  vertical-align: middle;
  margin: 5px 5px 50px 0;
}
#modal-img-missing {
  display: none;
  position: absolute;
  top: 45%;
  left: calc(50% - 150px);
  color: var(--marvel-red-light);
  font-size: 36px;
  font-weight: bold;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 3px;
  padding: 5px 10px;
  z-index: 25;
}

#modal-actions {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50px;
}
#modal-actions button {
  margin: 5px 10px;
  display: inline-block;
}
#modal button img {
  z-index: -1;
}
#modal-pause {
  display: none;
}

/* Helpbox modal */

#help-box {
  position: absolute;
  top: 0;
  left: 15%;
  width: calc(70% - 60px);
  height: calc(100% - 60px);
  z-index: 25;
  overflow-y: auto;
  background-color: #444;
  color: #CCC;
  text-align: left;
  padding: 30px;
  margin: 0;
  transform: scale(0);
  -webkit-transition: transform .3s linear;
  -moz-transition: transform .3s linear;
  -o-transition: transform .3s linear;
  transition: transform .3s linear;
  cursor: default;
}
#help-box p {
  margin: 8px;
  font-size: 14px;
  line-height: 24px;
}
#help-box a, #help-box a:visited {
  color: #af7f7f;
  text-decoration: none;
}
#help-box a:hover, #help-box a:visited:hover {
  text-decoration: underline;
}

/* Mobile Portrait modal */

#rotate-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 15;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
}

#rotate-modal h2 {
  background-color: var(--marvel-red);
  color: white;
  font-size: 34px!important;
  padding: 5px 0!important;
  margin: 0px 0px 10px 0px;
}
#rotate-modal .marvel {
  font-size: 36px!important;
  padding-right: 15px!important;
}

#rotate-modal-img {
  position: relative;
  top: 25%;
  left: 0;
  min-width: 25%;
  max-width: 45%;
}

#rotate-modal p {
  display: block;
  position: relative;
  top: 25%;
  left: 25%;
  width: 50%;
  background-color: var(--marvel-red);
  color: white;
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
  padding: 15px 0px;
}
#rotate-modal p small {
  font-size: 14px;
  text-transform: lowercase;
  padding: 15px 5px 5px 5px;
  display: inline-block;
  line-height: 20px;
}

@media (orientation: landscape) {
  #rotate-modal {
    z-index: -1;
    opacity: 0;
    -webkit-transition: opacity 0.5s linear;
    -moz-transition: opacity 0.5s linear;
    -o-transition: opacity 0.5s linear;
    transition: opacity 0.5s linear;
  }
  #rotate-modal p, #rotate-modal-img {
    height: 0;
  }
}

@media (orientation: portrait) {
  #rotate-modal {
    opacity: 1;
    -webkit-transition: 0.1s linear;
    -moz-transition: 0.1s linear;
    -o-transition: 0.1s linear;
    transition: 0.1s linear;
  }
  .logo {
    display: block;
    padding: 5px;
    height: 44px;
  }
  #sidebar, #controls, #comics-bar, #histogram-container, #view-comics-container {
    display: none!important;
  }
  #explanations, #node-details {
    opacity: 0!important;
  }
  #loader {
    top: 20%;
    left: calc(50% - 25px)!important;
  }
  #sigma-container {
    left: 0;
    width: 100%;
    height: 100%;
  }
}

@media (orientation: portrait) and (min-height: 1000px) {
  #rotate-modal p {
    font-size: 24px;
  }
  #rotate-modal p small {
    display: none;
  }
}


/* -------- Responsiveness ------------*/

.show-middle {
  display: none;
}

@media (min-width: 700px) {
  #controls {
    left: 201px;
  }
  #search-icon {
    left: 7px;
  }
  #comics-bar {
    right: 0;
  }
}

@media (min-width: 1001px) {
  #controls {
    left: 302px;
  }
  #search-icon {
    left: 7px;
  }
  .large-bar {
    display: inline;
  }
}
/* ... */

